// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:text 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text type is email: validate fail 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error has-error--isEmail"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error has-error--isEmail __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="email"
                value="abcd"
              />
            </div>
          </div>
          <ul
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
          >
            <li>
              Email 格式不正确
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text type is email: validate success 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="email"
                value="test@baidu.com"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text type is password with revealPassword 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="password"
                value="abcd"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text type is password: password invisible 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input-password"
                name="text"
                placeholder=""
                size="10"
                type="password"
                value="abcd"
              />
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-revealPassword"
              >
                <icon-mock
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-icon-invisible icon-invisible __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-icon-invisible"
                  icon="invisible"
                />
              </a>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text type is password: password visible 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input-password"
                name="text"
                placeholder=""
                size="10"
                type="text"
                value="abcd"
              />
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-revealPassword"
              >
                <icon-mock
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-icon-view icon-view __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-icon-view"
                  icon="view"
                />
              </a>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text type is url: validate fail 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error has-error--isUrl"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error has-error--isUrl __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="url"
                value="abcd"
              />
            </div>
          </div>
          <ul
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
          >
            <li>
              URL 格式不正确
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text type is url: validate success 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="url"
                value="https://www.baidu.com"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with addOn 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl--withAddOn"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-button"
            >
              <button
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                type="button"
              >
                <span>
                  搜索
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with clearable 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="text"
                value="abcd"
              />
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-clear"
              >
                <icon-mock
                  class="icon icon-input-clear"
                  icon="input-clear"
                />
              </a>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with counter 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-counter"
              >
                0
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with counter 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="text"
                value="abcd"
              />
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-counter"
              >
                4
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with counter and maxLength 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                maxlength="10"
                name="text"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-counter"
              >
                0/10
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with counter and maxLength 2`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                maxlength="10"
                name="text"
                placeholder=""
                size="10"
                type="text"
                value="abcd"
              />
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-counter"
              >
                4/10
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with minLength 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal is-error has-error--maxLength"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-error has-error--maxLength __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--borderHalf test-text-class-one"
            >
              <input
                autocomplete="off"
                class="test-text-class-two"
                maxlength="8"
                minlength="5"
                name="text"
                placeholder=""
                size="10"
                type="text"
                value="123456789"
              />
            </div>
          </div>
          <ul
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-feedback"
          >
            <li>
              请控制内容长度, 不要输入 8 个以上字符
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with options 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--withAC"
              role="combobox"
            >
              <input
                aria-autocomplete="list"
                autocomplete="off"
                class=""
                id="downshift-0-input"
                name="text"
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with options and multiple Renderer:text with options and multiple and delimiter: first option selected 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="downshift-1-menu"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--withAC is-opened __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--multiple has-popover"
              role="combobox"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-value"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__OverflowTpl __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueLabel"
                >
                  OptionA
                </span>
                <icon-mock
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueIcon icon icon-close"
                  icon="close"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="downshift-1-menu"
                autocomplete="off"
                class=""
                id="downshift-1-input"
                name="text"
                size="10"
                type="text"
                value=""
              />
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-popover"
                data-prismui-theme="cxd"
                role="popover"
                style="display: block; width: 0px; left: 0px; top: 0px; visibility: hidden;"
                theme="cxd"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugs"
                >
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-0"
                    role="option"
                  >
                    <span>
                      OptionB
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-1"
                    role="option"
                  >
                    <span>
                      OptionC
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-2"
                    role="option"
                  >
                    <span>
                      OptionD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with options and multiple Renderer:text with options and multiple and delimiter: options is opened 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="downshift-1-menu"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--withAC is-opened __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--multiple has-popover"
              role="combobox"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-1-menu"
                autocomplete="off"
                class=""
                id="downshift-1-input"
                name="text"
                size="10"
                type="text"
                value=""
              />
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-popover"
                data-prismui-theme="cxd"
                role="popover"
                style="display: block; width: 0px; left: 0px; top: 0px; visibility: hidden;"
                theme="cxd"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugs"
                >
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-0"
                    role="option"
                  >
                    <span>
                      OptionA
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-1"
                    role="option"
                  >
                    <span>
                      OptionB
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-2"
                    role="option"
                  >
                    <span>
                      OptionC
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-3"
                    role="option"
                  >
                    <span>
                      OptionD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with options and multiple Renderer:text with options and multiple and delimiter: options is opened again, and first option already selected 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="downshift-1-menu"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--withAC is-opened __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--multiple has-popover"
              role="combobox"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-value"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__OverflowTpl __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueLabel"
                >
                  OptionA
                </span>
                <icon-mock
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueIcon icon icon-close"
                  icon="close"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="downshift-1-menu"
                autocomplete="off"
                class=""
                id="downshift-1-input"
                name="text"
                size="10"
                type="text"
                value=""
              />
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-popover"
                data-prismui-theme="cxd"
                role="popover"
                style="display: block; width: 0px; left: 0px; top: 0px; visibility: hidden;"
                theme="cxd"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugs"
                >
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-0"
                    role="option"
                  >
                    <span>
                      OptionB
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-1"
                    role="option"
                  >
                    <span>
                      OptionC
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-2"
                    role="option"
                  >
                    <span>
                      OptionD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with options and multiple Renderer:text with options and multiple and delimiter: second option selected 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="downshift-1-menu"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--withAC is-opened __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--multiple has-popover"
              role="combobox"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-value"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__OverflowTpl __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueLabel"
                >
                  OptionA
                </span>
                <icon-mock
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueIcon icon icon-close"
                  icon="close"
                />
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-value"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__OverflowTpl __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueLabel"
                >
                  OptionB
                </span>
                <icon-mock
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueIcon icon icon-close"
                  icon="close"
                />
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="downshift-1-menu"
                autocomplete="off"
                class=""
                id="downshift-1-input"
                name="text"
                size="10"
                type="text"
                value=""
              />
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-popover"
                data-prismui-theme="cxd"
                role="popover"
                style="display: block; width: 0px; left: 0px; top: 0px; visibility: hidden;"
                theme="cxd"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugs"
                >
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-0"
                    role="option"
                  >
                    <span>
                      OptionC
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-1-item-1"
                    role="option"
                  >
                    <span>
                      OptionD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a-b
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with options and multiple Renderer:text with options and multiple and delimiter: thrid option create 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--withAC __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--multiple"
              role="combobox"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-value"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__OverflowTpl __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueLabel"
                >
                  OptionA
                </span>
                <icon-mock
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueIcon icon icon-close"
                  icon="close"
                />
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-value"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__OverflowTpl __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueLabel"
                >
                  OptionB
                </span>
                <icon-mock
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueIcon icon icon-close"
                  icon="close"
                />
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-value"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__OverflowTpl __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueLabel"
                >
                  AbCd
                </span>
                <icon-mock
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-valueIcon icon icon-close"
                  icon="close"
                />
              </div>
              <input
                aria-autocomplete="list"
                autocomplete="off"
                class=""
                id="downshift-1-input"
                name="text"
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a-b-AbCd
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with options: options is open 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="downshift-0-menu"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--withAC is-opened has-popover"
              role="combobox"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-0-menu"
                autocomplete="off"
                class=""
                id="downshift-0-input"
                name="text"
                size="10"
                type="text"
                value=""
              />
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-popover"
                data-prismui-theme="cxd"
                role="popover"
                style="display: block; width: 0px; left: 0px; top: 0px; visibility: hidden;"
                theme="cxd"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugs"
                >
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-0-item-0"
                    role="option"
                  >
                    <span>
                      Option A
                    </span>
                  </div>
                  <div
                    aria-selected="false"
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-sugItem"
                    id="downshift-0-item-1"
                    role="option"
                  >
                    <span>
                      Option B
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with options: select first option 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl is-focused"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input--withAC"
              role="combobox"
            >
              <input
                aria-autocomplete="list"
                autocomplete="off"
                class=""
                id="downshift-0-input"
                name="text"
                size="10"
                type="text"
                value="a"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:text with prefix and suffix 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="text"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  text
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control __PRISMUI_COMPONENT_CLASS_PREFIX__TextControl"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-input"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-inputPrefix"
              >
                ￥
              </span>
              <input
                autocomplete="off"
                class=""
                name="text"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TextControl-inputSuffix"
              >
                RMB
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
